# rust-websocket

./: Cargo.toml  README.md
src/: client.rs  main.rs
static/: index.html
