[package]
name = "rust-websocket-whitelist"
version = "0.1.0"
authors = ["Compro-Prasad <comproprasad@gmail.com>"]
edition = "2018"

[[bin]]
name = "ws-server"
path = "src/main.rs"

[[bin]]
name = "ws-client"
path = "src/client.rs"

[dependencies]
actix-web = "1.0.5"
actix-codec = "0.1.2"
actix = "0.8.3"
actix-web-actors = "1.0.2"
actix-files = "0.1.4"
awc = "0.2.2"
env_logger = "0.6.2"
futures = "0.1.28"
bytes = "0.4.12"
lazy_static = "1.3.0"
